# bodynote-openclaw-agent

./: .gitignore  CHANGELOG.md  LICENSE  README.md  config.example.toml  pyproject.toml
docs/: ARCHITECTURE.md  ASSET_INVENTORY.md  DEVELOPMENT_PLAN.md  PRIVACY.md  PRODUCT_CONTRACTS.md  RELEASE.md
skill/bodynote/: SKILL.md
skill/bodynote/agents/: openai.yaml
skill/bodynote/references/: agent-contract.md  guides.md  health-model.md  maintenance.md  reports.md  scheduling.md
src/bodynote_agent/: __init__.py  __main__.py  analytics.py  cli.py  config.py  cycle.py  dashboard.py  database.py  events.py  food_library.py  gap_check.py  html_report.py  maintenance.py  parsing.py  preferences.py  reference_library.py  reports.py  runtime.py  schedule_plan.py  service.py  time_utils.py  trends.py  validation.py
src/bodynote_agent/handlers/: __init__.py  activity.py  contracts.py  correction.py  cycle.py  medical.py  nutrition.py  recovery.py  vitals.py
tests/: test_analytics.py  test_cli.py  test_food_library.py  test_maintenance.py  test_onboarding.py  test_parsing.py  test_reports.py  test_runtime.py  test_service.py  test_trends.py
tests/fixtures/: graywind_regressions.json
