[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "bodynote-openclaw-agent"
version = "0.1.0"
description = "Local-first health cockpit and report workflow for OpenClaw."
requires-python = ">=3.11"
dependencies = [
  "Pillow>=11,<13",
  "reportlab>=4,<5",
]

[project.scripts]
bodynote-agent = "bodynote_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
